--- a/2page.html
+++ b/2page.html
@@ -260,7 +260,7 @@ background: orange;
 			</div>
 			
 			<script src="mapbox.js"></script>
-			<script type="text/javascript" src="chart/Temt_Sun.js"></script>
+			<script type="text/javascript" src="Temt_Sun.js"></script>
 			
 	   	 	</div>
 			
@@ -276,10 +276,10 @@ background: orange;
 		
 		
         <div class="panel" style="height:50vh">
-            <h1>We already have the most efficient carban capture technology!</h1>
+            <h1>We already have the most efficient carbon capture technology!</h1>
 			<div class="left-half">
 			<div id='img'>  
-				<img src="image/air.jpg" alt="carbon" class="img" style="width:60%"> 		
+				<img src="image/air.jpeg" alt="carbon" class="img" style="width:60%"> 		
 			</div>
 			</div>
 			
