--- a/2page.html
+++ b/2page.html
@@ -6,8 +6,10 @@
     <link href="../favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <title>The Beauty of Street trees</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+    <script src="lib/d3.v5.min.js"></script>
     <!-- <script src="../d3.js"></script> -->
-	<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+	
 	<!-- <script src="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js"></script>
 	<link href="https://api.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css" rel="stylesheet" /> -->
 		<link href="https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css" rel="stylesheet">
